--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test</title>
 </head>
-<script>
-    alert( 'test2' )
-</script>
+<script src="./video6/video6.js"></script>
+
+ 
 <body>
     <h1>test1</h1>
 </body>
